Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
     </head>
-    <body><h1>Game awards</h1><h2> Best game 
-    </h2>
-    <h3> Winner Black ops 4</h3>
-           <img src="https://www.psu.com/app/uploads/2018/08/nomad-call-of-duty-black-ops-4-1024x576.jpg "> 
-  <h2>nominees </h2>
-  <h3>FORTNITE</h3>
-  <img src="https://www.nbcsports.com/philadelphia/sites/csnphilly/files/styles/article_hero_image/public/2018/11/05/fortnite.jpg?itok=LecnYq85 ">
-  <h4>Red Dead 2</h4>
-  <img src="https://www.rockstargames.com/reddeadredemption2/dist/img/global/social/ea95b42f4d8029ac2510571cc8dbdae4.jpg ">
+    <body>
+        <h1>Game awards</h1>
+        <h2 class="gameawards"> Best game </h2>
+        <h3 class="gameawards"> Winner Black ops 4</h3>
+        <img src="https://www.psu.com/app/uploads/2018/08/nomad-call-of-duty-black-ops-4-1024x576.jpg "> 
+        <h2 class="fortnite">nominees </h2>
+        <h3 class="fortnite">FORTNITE</h3>
+        <img src="https://www.nbcsports.com/philadelphia/sites/csnphilly/files/styles/article_hero_image/public/2018/11/05/fortnite.jpg?itok=LecnYq85 ">
+        <h4>Red Dead 2</h4>
+        <img src="https://www.rockstargames.com/reddeadredemption2/dist/img/global/social/ea95b42f4d8029ac2510571cc8dbdae4.jpg ">
   
-<h5>Rainbow six</h5>  <img src="https://hdqwalls.com/wallpapers/tom-clancy-rainbow-six-siege-8c.jpg "></body>
+        <h5>Rainbow six</h5>  
+        <img src="https://hdqwalls.com/wallpapers/tom-clancy-rainbow-six-siege-8c.jpg "></body>
 
 </html>
